Configuración de despliegue: environments, scripts, CI y prod properties